--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header>
+        <!-- main brand logo -->
+        <a href="index.html">ByteSized Consultants</a>
+
+        <!-- navigation links -->
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Get In Touch</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
