add main hero content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             </ul>
         </nav>
     </header>
+
+    <!-- main site content -->
+    <main>
+        <section id="hero" class="hero">
+            <h1 class="main_title">We are ByteSized Solutions</h1>
+            <p class="main_subtitle">Your Trusted IT Consultants</p>
+            <a href="" class="btn btn-pry cta">Get In Touch</a>
+        </section>
+
+    </main>
     
 </body>
 </html>
