add about us section

--- a/index.html
+++ b/index.html
@@ -25,10 +25,16 @@
 
     <!-- main site content -->
     <main>
+        <!-- hero section -->
         <section id="hero" class="hero">
             <h1 class="main_title">We are ByteSized Solutions</h1>
             <p class="main_subtitle">Your Trusted IT Consultants</p>
             <a href="" class="btn btn-pry cta">Get In Touch</a>
+        </section>
+        <!-- who we are section -->
+        <section class="about container">
+            <h2 class="section_title">Who We Are</h2>
+            <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT services that keep your company running smoothly and securely.</p>
         </section>
 
     </main>
