--- a/index.html
+++ b/index.html
@@ -31,12 +31,52 @@
             <p class="main_subtitle">Your Trusted IT Consultants</p>
             <a href="" class="btn btn-pry cta">Get In Touch</a>
         </section>
+
         <!-- who we are section -->
         <section class="about container">
             <h2 class="section_title">Who We Are</h2>
             <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT services that keep your company running smoothly and securely.</p>
         </section>
 
+        <!-- services section  -->
+        <section class="services container">
+            <h2 class="section_title">What We Offer</h2>
+
+            services cards
+            <article>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">Cloud Computing Solutions</h3>
+                    <span class="service_card_text">Take advantage of the latest technology with our cloud computing solutions, designed to increase efficiency and reduce costs.</span>
+                </div>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">Cyber Security and Data Protection</h3>
+                    <span class="service_card_text">Keep your company's sensitive information secure with our comprehensive cyber security solutions.</span>
+                </div>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">Network Design and Implementation</h3>
+                    <span class="service_card_text">Ensure a seamless and reliable network with our expert design and implementation services.</span>
+                </div>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">Managed IT Services</h3>
+                    <span class="service_card_text">Get the software your business needs with our customized software development services.</span>
+                </div>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">Software Development and Customization</h3>
+                    <span class="service_card_text">TGet the software your business needs with our customized software development services.</span>
+                </div>
+                <div class="service_card">
+                    <img src="" alt="service_card_image" class="service_card_image">
+                    <h3 class="service_card_title">QA & Testing</h3>
+                    <span class="service_card_text">Ensure the quality and reliability of your software with our thorough quality assurance and testing services.</span>
+                </div>
+            </article>
+            
+        </section>
     </main>
     
 </body>
