--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="services container">
             <h2 class="section_title">What We Offer</h2>
 
-            services cards
+            <!-- services cards -->
             <article>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
@@ -75,8 +75,37 @@
                     <span class="service_card_text">Ensure the quality and reliability of your software with our thorough quality assurance and testing services.</span>
                 </div>
             </article>
-            
         </section>
+
+        <!-- why choose us section  -->
+        <section class="values container">
+            <h2 class="section_title">What We Offer</h2>
+
+            <!-- values cards -->
+            <article>
+                <div class="values_card">
+                    <img src="" alt="values_card_image" class="values_card_image">
+                    <h3 class="values_card_title">Tailored Solutions</h3>
+                    <span class="values_card_text">Our consultations are tailored to your specific needs and goals, ensuring a solution that fits your company's unique requirements.</span>
+                </div>
+                <div class="values_card">
+                    <img src="" alt="values_card_image" class="values_card_image">
+                    <h3 class="values_card_title">Expert Knowledge</h3>
+                    <span class="values_card_text">Our team has a wealth of experience in a range of IT solutions, so you can trust us to stay ahead of the curve.</span>
+                </div>
+                <div class="values_card">
+                    <img src="" alt="values_card_image" class="values_card_image">
+                    <h3 class="values_card_title">Personalized Approach</h3>
+                    <span class="values_card_text">We view ourselves as partners, not just vendors. Our goal is to help your business thrive.</span>
+                </div>
+                <div class="values_card">
+                    <img src="" alt="values_card_image" class="values_card_image">
+                    <h3 class="values_card_title">Commitment to Qualityh</h3>
+                    <span class="values_card_text">We are dedicated to delivering high-quality IT services that exceed your expectations.</span>
+                </div>
+            </article>
+        </section>
+
     </main>
     
 </body>
