edit what we offer section. change from values to offers

--- a/index.html
+++ b/index.html
@@ -78,30 +78,30 @@
         </section>
 
         <!-- why choose us section  -->
-        <section class="values container">
+        <section class="offers container">
             <h2 class="section_title">What We Offer</h2>
 
-            <!-- values cards -->
+            <!-- offers cards -->
             <article>
-                <div class="values_card">
-                    <img src="" alt="values_card_image" class="values_card_image">
-                    <h3 class="values_card_title">Tailored Solutions</h3>
-                    <span class="values_card_text">Our consultations are tailored to your specific needs and goals, ensuring a solution that fits your company's unique requirements.</span>
+                <div class="offers_card">
+                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <h3 class="offers_card_title">Tailored Solutions</h3>
+                    <span class="offers_card_text">Our consultations are tailored to your specific needs and goals, ensuring a solution that fits your company's unique requirements.</span>
                 </div>
-                <div class="values_card">
-                    <img src="" alt="values_card_image" class="values_card_image">
-                    <h3 class="values_card_title">Expert Knowledge</h3>
-                    <span class="values_card_text">Our team has a wealth of experience in a range of IT solutions, so you can trust us to stay ahead of the curve.</span>
+                <div class="offers_card">
+                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <h3 class="offers_card_title">Expert Knowledge</h3>
+                    <span class="offers_card_text">Our team has a wealth of experience in a range of IT solutions, so you can trust us to stay ahead of the curve.</span>
                 </div>
-                <div class="values_card">
-                    <img src="" alt="values_card_image" class="values_card_image">
-                    <h3 class="values_card_title">Personalized Approach</h3>
-                    <span class="values_card_text">We view ourselves as partners, not just vendors. Our goal is to help your business thrive.</span>
+                <div class="offers_card">
+                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <h3 class="offers_card_title">Personalized Approach</h3>
+                    <span class="offers_card_text">We view ourselves as partners, not just vendors. Our goal is to help your business thrive.</span>
                 </div>
-                <div class="values_card">
-                    <img src="" alt="values_card_image" class="values_card_image">
-                    <h3 class="values_card_title">Commitment to Qualityh</h3>
-                    <span class="values_card_text">We are dedicated to delivering high-quality IT services that exceed your expectations.</span>
+                <div class="offers_card">
+                    <img src="" alt="offers_card_image" class="offers_card_image">
+                    <h3 class="offers_card_title">Commitment to Qualityh</h3>
+                    <span class="offers_card_text">We are dedicated to delivering high-quality IT services that exceed your expectations.</span>
                 </div>
             </article>
         </section>
