add case study section

--- a/index.html
+++ b/index.html
@@ -100,12 +100,42 @@
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
-                    <h3 class="offers_card_title">Commitment to Qualityh</h3>
+                    <h3 class="offers_card_title">Commitment to Quality</h3>
                     <span class="offers_card_text">We are dedicated to delivering high-quality IT services that exceed your expectations.</span>
                 </div>
             </article>
         </section>
 
+        <!--projects ||  success stories || case studies -->
+        <section class="offers container">
+            <h2 class="section_title">Case Studies</h2>
+            <p class="section_text">See how we have helped businesses like yours reach their goals with our IT solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges and requirements.</p>
+
+            <!-- projects cards -->
+            <article>
+                <div class="cases_card">
+                    <section class="card_article">
+                    <img class="card_image" src="" alt="cases card image" class="cases_card_image">
+                        <h3 class="card_title">Inked Productions</h3>
+                        <span class="card_text">Inked Productions is a leading film production company, known for producing critically acclaimed and commercially successful films. The company faced a challenge in setting up a 3-room film edit suite with shared storage, to support their growing business. With the increasing demand for their services, they required a reliable and efficient IT solution that could meet their unique needs and support their growing business.</span>
+                    </section>
+                </div>
+                <div class="cases_card">
+                    <img class="card_image" src="" alt="cases card image" class="cases_card_image">
+                    <section class="card_article">
+                        <h3 class="card_title">Ant Media</h3>
+                        <span class="card_text">Ant Media is a rapidly growing company that provides a range of office networking solutions to businesses of all sizes. They faced the challenge of ensuring seamless communication and collaboration between their employees, in order to continue delivering outstanding results for their clients. Ant Media required a network solution that would be reliable, efficient, and secure, allowing them to stay ahead of the game in their industry.</span>
+                    </section>
+                </div>
+                <div class="cases_card">
+                    <img class="card_image" src="" alt="cases card image" class="cases_card_image">
+                    <section class="card_article">
+                        <h3 class="card_title">SoundBeetle Music</h3>
+                        <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing the way people access and license music for their projects. They needed to build a custom music licensing application that would allow users to search, preview, and license music tracks in a seamless and user-friendly way. SoundBeetle faced the challenge of developing a robust and scalable application that would meet the needs of their growing business and customer base. With the help of ByteSized Solutions, they were able to turn their vision into a reality.</span>
+                    </section>
+                </div>
+            </article>
+        </section>
     </main>
     
 </body>
