add contact section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,47 @@
                 </div>
             </article>
         </section>
+
+        <!-- contact section  -->
+        
+        <section class="contact">
+            <h3 class="section_title">Get In Touch</h3>
+            <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help you find the perfect IT solution for your needs.</p>
+            <div class="form">
+                <form action="#" method="post">
+                    <div class="form-field">
+                        <label for="fname">Last Name</label>
+                        <input type="text" name="name" id="fname">
+                    </div>
+                    <div class="form-field">
+                        <label for="lname">First Name</label>
+                        <input type="text" name="name" id="lname">
+                    </div>
+                    <div class="form-field">
+                        <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                    </div>
+                    <div class="form-field">
+                        <label for="company">Company</label>
+                    <input type="text" name="company" id="company">
+                    </div>
+                    <div class="form-field">
+                        <label for="message">How can we help you?</label>
+                        <input type="text" name="message" id="message">
+                    </div>
+                    <button class="btn btn-pry">Send Message</button>
+                </form>
+                <div class="side_form"> <!-- description of what happens after client fills and submits form-->
+                    <h4>What Comes Next</h4>
+                    <ol>
+                        <li>Our sales team will be in touch with you within a few days after carefully evaluating your business needs.</li>
+                        <li>To maintain the highest level of privacy, we will also be signing a Non-Disclosure Agreement (NDA).</li>
+                        <li>Afterwards, our pre-sales manager will provide you with project estimates and an approximate timeline for the project.</li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
     </main>
     
 </body>
