add basic footer

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p>©2023 ByteSized Solutions. All rights reserved</p>
+        </footer>
 
     </main>
     
