create flex and grid container classes and add to nav and header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,23 @@
     <title>ByteSized Consultancy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    <header>
-        <!-- main brand logo -->
-        <a href="index.html">ByteSized Consultants</a>
 
-        <!-- navigation links -->
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Get In Touch</a></li>
-            </ul>
-        </nav>
+<body>
+    <header >
+        <div class="header flex container">
+            <!-- main brand logo -->
+            <a href="index.html">ByteSized Consultants</a>
+
+            <!-- navigation links -->
+            <nav>
+                <ul class=" nav_items flex">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Get In Touch</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- main site content -->
@@ -35,7 +39,10 @@
         <!-- who we are section -->
         <section class="about container">
             <h2 class="section_title">Who We Are</h2>
-            <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT services that keep your company running smoothly and securely.</p>
+            <p class="section_text">At Exorcist Systems, we are a team of IT experts dedicated to helping businesses
+                stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
+                a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
+                services that keep your company running smoothly and securely.</p>
         </section>
 
         <!-- services section  -->
@@ -47,32 +54,38 @@
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">Cloud Computing Solutions</h3>
-                    <span class="service_card_text">Take advantage of the latest technology with our cloud computing solutions, designed to increase efficiency and reduce costs.</span>
+                    <span class="service_card_text">Take advantage of the latest technology with our cloud computing
+                        solutions, designed to increase efficiency and reduce costs.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">Cyber Security and Data Protection</h3>
-                    <span class="service_card_text">Keep your company's sensitive information secure with our comprehensive cyber security solutions.</span>
+                    <span class="service_card_text">Keep your company's sensitive information secure with our
+                        comprehensive cyber security solutions.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">Network Design and Implementation</h3>
-                    <span class="service_card_text">Ensure a seamless and reliable network with our expert design and implementation services.</span>
+                    <span class="service_card_text">Ensure a seamless and reliable network with our expert design and
+                        implementation services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">Managed IT Services</h3>
-                    <span class="service_card_text">Get the software your business needs with our customized software development services.</span>
+                    <span class="service_card_text">Get the software your business needs with our customized software
+                        development services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">Software Development and Customization</h3>
-                    <span class="service_card_text">TGet the software your business needs with our customized software development services.</span>
+                    <span class="service_card_text">TGet the software your business needs with our customized software
+                        development services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="service_card_title">QA & Testing</h3>
-                    <span class="service_card_text">Ensure the quality and reliability of your software with our thorough quality assurance and testing services.</span>
+                    <span class="service_card_text">Ensure the quality and reliability of your software with our
+                        thorough quality assurance and testing services.</span>
                 </div>
             </article>
         </section>
@@ -86,22 +99,26 @@
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <h3 class="offers_card_title">Tailored Solutions</h3>
-                    <span class="offers_card_text">Our consultations are tailored to your specific needs and goals, ensuring a solution that fits your company's unique requirements.</span>
+                    <span class="offers_card_text">Our consultations are tailored to your specific needs and goals,
+                        ensuring a solution that fits your company's unique requirements.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <h3 class="offers_card_title">Expert Knowledge</h3>
-                    <span class="offers_card_text">Our team has a wealth of experience in a range of IT solutions, so you can trust us to stay ahead of the curve.</span>
+                    <span class="offers_card_text">Our team has a wealth of experience in a range of IT solutions, so
+                        you can trust us to stay ahead of the curve.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <h3 class="offers_card_title">Personalized Approach</h3>
-                    <span class="offers_card_text">We view ourselves as partners, not just vendors. Our goal is to help your business thrive.</span>
+                    <span class="offers_card_text">We view ourselves as partners, not just vendors. Our goal is to help
+                        your business thrive.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
                     <h3 class="offers_card_title">Commitment to Quality</h3>
-                    <span class="offers_card_text">We are dedicated to delivering high-quality IT services that exceed your expectations.</span>
+                    <span class="offers_card_text">We are dedicated to delivering high-quality IT services that exceed
+                        your expectations.</span>
                 </div>
             </article>
         </section>
@@ -109,39 +126,59 @@
         <!--projects ||  success stories || case studies -->
         <section class="offers container">
             <h2 class="section_title">Case Studies</h2>
-            <p class="section_text">See how we have helped businesses like yours reach their goals with our IT solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges and requirements.</p>
+            <p class="section_text">See how we have helped businesses like yours reach their goals with our IT
+                solutions. Our portfolio showcases a diverse range of industries, each with its own unique challenges
+                and requirements.</p>
 
             <!-- projects cards -->
             <article>
                 <div class="cases_card">
                     <section class="card_article">
-                    <img class="card_image" src="" alt="cases card image" class="cases_card_image">
+                        <img class="card_image" src="" alt="cases card image" class="cases_card_image">
                         <h3 class="card_title">Inked Productions</h3>
-                        <span class="card_text">Inked Productions is a leading film production company, known for producing critically acclaimed and commercially successful films. The company faced a challenge in setting up a 3-room film edit suite with shared storage, to support their growing business. With the increasing demand for their services, they required a reliable and efficient IT solution that could meet their unique needs and support their growing business.</span>
+                        <span class="card_text">Inked Productions is a leading film production company, known for
+                            producing critically acclaimed and commercially successful films. The company faced a
+                            challenge in setting up a 3-room film edit suite with shared storage, to support their
+                            growing business. With the increasing demand for their services, they required a reliable
+                            and efficient IT solution that could meet their unique needs and support their growing
+                            business.</span>
                     </section>
                 </div>
                 <div class="cases_card">
                     <img class="card_image" src="" alt="cases card image" class="cases_card_image">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
-                        <span class="card_text">Ant Media is a rapidly growing company that provides a range of office networking solutions to businesses of all sizes. They faced the challenge of ensuring seamless communication and collaboration between their employees, in order to continue delivering outstanding results for their clients. Ant Media required a network solution that would be reliable, efficient, and secure, allowing them to stay ahead of the game in their industry.</span>
+                        <span class="card_text">Ant Media is a rapidly growing company that provides a range of office
+                            networking solutions to businesses of all sizes. They faced the challenge of ensuring
+                            seamless communication and collaboration between their employees, in order to continue
+                            delivering outstanding results for their clients. Ant Media required a network solution that
+                            would be reliable, efficient, and secure, allowing them to stay ahead of the game in their
+                            industry.</span>
                     </section>
                 </div>
                 <div class="cases_card">
                     <img class="card_image" src="" alt="cases card image" class="cases_card_image">
                     <section class="card_article">
                         <h3 class="card_title">SoundBeetle Music</h3>
-                        <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing the way people access and license music for their projects. They needed to build a custom music licensing application that would allow users to search, preview, and license music tracks in a seamless and user-friendly way. SoundBeetle faced the challenge of developing a robust and scalable application that would meet the needs of their growing business and customer base. With the help of ByteSized Solutions, they were able to turn their vision into a reality.</span>
+                        <span class="card_text">SoundBeetle is a cutting-edge music licensing company that is changing
+                            the way people access and license music for their projects. They needed to build a custom
+                            music licensing application that would allow users to search, preview, and license music
+                            tracks in a seamless and user-friendly way. SoundBeetle faced the challenge of developing a
+                            robust and scalable application that would meet the needs of their growing business and
+                            customer base. With the help of ByteSized Solutions, they were able to turn their vision
+                            into a reality.</span>
                     </section>
                 </div>
             </article>
         </section>
 
         <!-- contact section  -->
-        
-        <section class="contact">
+
+        <section class="contact container">
             <h3 class="section_title">Get In Touch</h3>
-            <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help you find the perfect IT solution for your needs.</p>
+            <p class="section_text">Don't let technology be a burden for your business. Take the first step towards a
+                more efficient and secure future by reaching out to ByteSized Solutions today. Our team is ready to help
+                you find the perfect IT solution for your needs.</p>
             <div class="form">
                 <form action="#" method="post">
                     <div class="form-field">
@@ -154,11 +191,11 @@
                     </div>
                     <div class="form-field">
                         <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email">
                     </div>
                     <div class="form-field">
                         <label for="company">Company</label>
-                    <input type="text" name="company" id="company">
+                        <input type="text" name="company" id="company">
                     </div>
                     <div class="form-field">
                         <label for="message">How can we help you?</label>
@@ -169,9 +206,12 @@
                 <div class="side_form"> <!-- description of what happens after client fills and submits form-->
                     <h4>What Comes Next</h4>
                     <ol>
-                        <li>Our sales team will be in touch with you within a few days after carefully evaluating your business needs.</li>
-                        <li>To maintain the highest level of privacy, we will also be signing a Non-Disclosure Agreement (NDA).</li>
-                        <li>Afterwards, our pre-sales manager will provide you with project estimates and an approximate timeline for the project.</li>
+                        <li>Our sales team will be in touch with you within a few days after carefully evaluating your
+                            business needs.</li>
+                        <li>To maintain the highest level of privacy, we will also be signing a Non-Disclosure Agreement
+                            (NDA).</li>
+                        <li>Afterwards, our pre-sales manager will provide you with project estimates and an approximate
+                            timeline for the project.</li>
                     </ol>
                 </div>
             </div>
@@ -181,6 +221,7 @@
         </footer>
 
     </main>
-    
+
 </body>
+
 </html>
