add nav_item class to nav items and add active to home

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <!-- navigation links -->
             <nav>
                 <ul class=" nav_items flex">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Get In Touch</a></li>
+                    <li><a class="active nav-item"href="">Home</a></li>
+                    <li><a class="nav-item"href="">About</a></li>
+                    <li><a class="nav-item"href="">Services</a></li>
+                    <li><a class="nav-item"href="">Get In Touch</a></li>
                 </ul>
             </nav>
         </div>
