add nav_iem class to nav items

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <nav>
                 <ul class=" nav_items flex">
                     <li><a class="active nav-item"href="">Home</a></li>
-                    <li><a class="nav-item"href="">About</a></li>
-                    <li><a class="nav-item"href="">Services</a></li>
-                    <li><a class="nav-item"href="">Get In Touch</a></li>
+                    <li><a class="nav_item"href="">About</a></li>
+                    <li><a class="nav_item"href="">Services</a></li>
+                    <li><a class="nav_item"href="">Get In Touch</a></li>
                 </ul>
             </nav>
         </div>
