style typography sizes

--- a/index.html
+++ b/index.html
@@ -53,38 +53,38 @@
             <article>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">Cloud Computing Solutions</h3>
-                    <span class="service_card_text">Take advantage of the latest technology with our cloud computing
+                    <h3 class="card_title">Cloud Computing Solutions</h3>
+                    <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">Cyber Security and Data Protection</h3>
-                    <span class="service_card_text">Keep your company's sensitive information secure with our
+                    <h3 class="card_title">Cyber Security and Data Protection</h3>
+                    <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">Network Design and Implementation</h3>
-                    <span class="service_card_text">Ensure a seamless and reliable network with our expert design and
+                    <h3 class="card_title">Network Design and Implementation</h3>
+                    <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">Managed IT Services</h3>
-                    <span class="service_card_text">Get the software your business needs with our customized software
+                    <h3 class="card_title">Managed IT Services</h3>
+                    <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">Software Development and Customization</h3>
-                    <span class="service_card_text">TGet the software your business needs with our customized software
+                    <h3 class="card_title">Software Development and Customization</h3>
+                    <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
                 </div>
                 <div class="service_card">
                     <img src="" alt="service_card_image" class="service_card_image">
-                    <h3 class="service_card_title">QA & Testing</h3>
-                    <span class="service_card_text">Ensure the quality and reliability of your software with our
+                    <h3 class="card_title">QA & Testing</h3>
+                    <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
                 </div>
             </article>
@@ -92,32 +92,32 @@
 
         <!-- why choose us section  -->
         <section class="offers container">
-            <h2 class="section_title">What We Offer</h2>
+            <h2 class="section_title">Why Choose Us</h2>
 
             <!-- offers cards -->
             <article>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
-                    <h3 class="offers_card_title">Tailored Solutions</h3>
-                    <span class="offers_card_text">Our consultations are tailored to your specific needs and goals,
+                    <h3 class="card_title">Tailored Solutions</h3>
+                    <span class="card_text">Our consultations are tailored to your specific needs and goals,
                         ensuring a solution that fits your company's unique requirements.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
-                    <h3 class="offers_card_title">Expert Knowledge</h3>
-                    <span class="offers_card_text">Our team has a wealth of experience in a range of IT solutions, so
+                    <h3 class="card_title">Expert Knowledge</h3>
+                    <span class="card_text">Our team has a wealth of experience in a range of IT solutions, so
                         you can trust us to stay ahead of the curve.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
-                    <h3 class="offers_card_title">Personalized Approach</h3>
-                    <span class="offers_card_text">We view ourselves as partners, not just vendors. Our goal is to help
+                    <h3 class="card_title">Personalized Approach</h3>
+                    <span class="card_text">We view ourselves as partners, not just vendors. Our goal is to help
                         your business thrive.</span>
                 </div>
                 <div class="offers_card">
                     <img src="" alt="offers_card_image" class="offers_card_image">
-                    <h3 class="offers_card_title">Commitment to Quality</h3>
-                    <span class="offers_card_text">We are dedicated to delivering high-quality IT services that exceed
+                    <h3 class="card_title">Commitment to Quality</h3>
+                    <span class="card_text">We are dedicated to delivering high-quality IT services that exceed
                         your expectations.</span>
                 </div>
             </article>
@@ -204,13 +204,13 @@
                     <button class="btn btn-pry">Send Message</button>
                 </form>
                 <div class="side_form"> <!-- description of what happens after client fills and submits form-->
-                    <h4>What Comes Next</h4>
+                    <h4 class="card_title">What Comes Next</h4>
                     <ol>
-                        <li>Our sales team will be in touch with you within a few days after carefully evaluating your
+                        <li class="card_text">Our sales team will be in touch with you within a few days after carefully evaluating your
                             business needs.</li>
-                        <li>To maintain the highest level of privacy, we will also be signing a Non-Disclosure Agreement
+                        <li class="card_text">To maintain the highest level of privacy, we will also be signing a Non-Disclosure Agreement
                             (NDA).</li>
-                        <li>Afterwards, our pre-sales manager will provide you with project estimates and an approximate
+                        <li class="card_text">Afterwards, our pre-sales manager will provide you with project estimates and an approximate
                             timeline for the project.</li>
                     </ol>
                 </div>
