style hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- main site content -->
     <main>
         <!-- hero section -->
-        <section id="hero" class="hero">
+        <section id="hero" class="hero flex row">
             <h1 class="main_title">We are ByteSized Solutions</h1>
             <p class="main_subtitle">Your Trusted IT Consultants</p>
             <a href="" class="btn btn-pry cta">Get In Touch</a>
