--- a/index.html
+++ b/index.html
@@ -50,38 +50,38 @@
             <h2 class="section_title">What We Offer</h2>
 
             <!-- services cards -->
-            <article>
-                <div class="service_card">
+            <article class="grid services_cards ">
+                <div class="service_card card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
                 </div>
-                <div class="service_card">
+                <div class=" card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
                 </div>
-                <div class="service_card">
+                <div class=" card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
                 </div>
-                <div class="service_card">
+                <div class=" card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
                 </div>
-                <div class="service_card">
+                <div class=" card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
                 </div>
-                <div class="service_card">
+                <div class=" card">
                     <img src="" alt="service_card_image" class="service_card_image">
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
